[gd_scene load_steps=7 format=2]

[ext_resource path="res://Enemies/EnemyShipUFORed.gd" type="Script" id=1]
[ext_resource path="res://Source/Images/Player/ufoRed.png" type="Texture" id=2]
[ext_resource path="res://Bullets/BulletRed.tscn" type="PackedScene" id=3]

[sub_resource type="CircleShape2D" id=1]
radius = 44.1475

[sub_resource type="Animation" id=2]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}

[sub_resource type="Animation" id=3]
resource_name = "rotating"
length = 2.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 360.0 ]
}

[node name="EnemyShipUFO1" type="RigidBody2D" groups=["Enemies"]]
position = Vector2( 619, 345 )
collision_layer = 2
collision_mask = 3
mass = 300.0
contacts_reported = 100
contact_monitor = true
can_sleep = false
script = ExtResource( 1 )
__meta__ = {
"_edit_group_": true
}
bullets = ExtResource( 3 )
bullet_streams = 30

[node name="Sprite" type="Sprite" parent="."]
z_index = 1
texture = ExtResource( 2 )

[node name="ShootDelay" type="Timer" parent="."]
process_mode = 0
wait_time = 0.05
autostart = true

[node name="ShootTimer" type="Timer" parent="."]
autostart = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "rotating"
anims/RESET = SubResource( 2 )
anims/rotating = SubResource( 3 )

[node name="Position2D" type="Position2D" parent="."]

[connection signal="timeout" from="ShootDelay" to="." method="_on_ShootDelay_timeout"]
[connection signal="timeout" from="ShootTimer" to="." method="_on_ShootTimer_timeout"]
